# Ame

./: .env  Cargo.toml  LICENSE-APACHE  LICENSE-MIT
ame/: Cargo.toml
ame/src/: lib.rs  main.rs
ame/src/matchers/: drifting_bottle.rs  lolicon.rs  mod.rs
ame/src/plugins/: mod.rs  moli.rs  msg_saver.rs
crates/ame-models/: Cargo.toml
crates/ame-models/src/: lib.rs  msg_rev.rs  test_msg_rev.rs
crates/moli-sdk/: Cargo.toml
crates/moli-sdk/src/: lib.rs
crates/nonebot-rs/: Cargo.toml  README.md
crates/nonebot-rs/src/: action.rs  api.rs  api_resp.rs  config.rs  event.rs  lib.rs  message.rs  nonebot.rs  plugin.rs  utils.rs
crates/nonebot-rs/src/bot/: api.rs  mod.rs
crates/nonebot-rs/src/builtin/: bot_status.rs  echo.rs  logger.rs  macros.rs  mod.rs  prematchers.rs  rules.rs
crates/nonebot-rs/src/builtin/matcher/: action.rs  api.rs  message_event_matcher.rs  mod.rs  set_get.rs
crates/nonebot-rs/src/builtin/matcher/matchers/: action.rs  mod.rs
crates/nonebot-rs/src/connection/: mod.rs  revs_ws.rs  utils.rs  ws.rs
crates/nonebot-rs/src/scheduler/: mod.rs
migrations/: 20240409113046_msg_rev.sql
utils/cache-saver/: Cargo.toml
utils/cache-saver/src/: main.rs
