[workspace]
members = ["ame", "crates/*"]
resolver = "2"

[workspace.package]
version = "0.6.0"
authors = ["YosakuraTohu"]
license = "MIT OR Apache-2.0"
rust-version = "1.75.0"
publish = false

[workspace.dependencies]
nonebot-rs = { path = "crates/nonebot-rs" }
tokio = { version = "1.36.0", features = [
  "macros",
  "rt-multi-thread",
  "time",
  "sync",
] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

[profile.release]
lto = true
strip = true
panic = "abort"
