[workspace]
members = ["ame", "crates/*", "utils/*"]
resolver = "2"

[workspace.package]
version = "0.6.0"
authors = ["YosakuraTohu"]
license = "MIT OR Apache-2.0"
rust-version = "1.75.0"
publish = false

[workspace.dependencies]
ame-models = { path = "crates/ame-models" }
nonebot-rs = { path = "crates/nonebot-rs" }
moli-sdk = { path = "crates/moli-sdk" }
chrono = { version = "0.4.37", features = ["serde"] }
reqwest = { version = "0.12.2", features = ["json", "rustls-tls"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = [
  "postgres",
  "runtime-tokio",
  "uuid",
  "chrono",
] }
tokio = { version = "1.36.0", features = [
  "macros",
  "rt-multi-thread",
  "time",
  "sync",
] }
uuid = { version = "1.8.0", features = ["v4", "serde", "fast-rng"] }

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1
