[package]
name = "ame"
version.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true
edition = "2021"

[dependencies]
nonebot-rs.workspace = true
tokio.workspace = true
serde.workspace = true
mimalloc = "0.1.39"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
reqwest = { version = "0.11.24", default-features = false, features = [
  "json",
  "rustls-tls",
] }

[dev-dependencies]
tokio-test = "0.4.3"
