[package]
name = "ame"
version.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true
edition = "2021"

[dependencies]
ame-models.workspace = true
chrono.workspace = true
moli-sdk.workspace = true
nonebot-rs.workspace = true
reqwest.workspace = true
serde.workspace = true
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true
snmalloc-rs = "0.3.5"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4.3"
