[package]
name = "moli-sdk"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio-test = "0.4.4"
