[package]
name = "nonebot-rs"
license = "MIT"
description = "A Onebot SDK in Rust"
homepage = "https://github.com/abrahum/nonebot-rs"
authors = ["Abrahum Link<307887491@qq.com>"]
version = "0.4.0"
edition = "2021"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
headers = "0.4"
http = "1.0"
chrono = "0.4.19"
toml = "0.8.9"
async-trait = "0.1.51"
async-recursion = "1.0.5"
colored = "2.0.0"
config = "0.14"
tokio-tungstenite = "0.21"
uuid = { version = "1.7.0", features = ["v4", "serde", "fast-rng"] }

[dependencies.tracing]
version = "0.1"
features = ["std"]

[dependencies.futures-util]
version = "0.3.14"
features = ["sink"]

[dependencies.tokio-cron-scheduler]
version = "0.10"
