[package]
name = "nonebot-rs"
license = "MIT"
description = "A Onebot SDK in Rust"
homepage = "https://github.com/abrahum/nonebot-rs"
authors = ["Abrahum Link<307887491@qq.com>", "YosakuraTohu"]
version = "0.4.0"
edition = "2021"

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
async-recursion = "1.0.5"
async-trait = "0.1.51"
colored = "2.0.0"
config = "0.14"
headers = "0.4"
http = "1.0"
tokio-tungstenite = "0.21"
toml = "0.8.9"

[dependencies.tracing]
version = "0.1"
features = ["std"]

[dependencies.futures-util]
version = "0.3.14"
features = ["sink"]

[dependencies.tokio-cron-scheduler]
version = "0.10"
