[package]
name = "cache-saver"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
ame-models.workspace = true
reqwest.workspace = true
sqlx.workspace = true
tokio.workspace = true
colored = "2.1.0"
futures-util = { version = "0.3.30" }
sha256 = "1.5.0"
